fix: remove redundant color variable definitions and clean up dark mode styles for improved consistency

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -12,18 +12,8 @@ html.dark {
   color: inherit !important;
 }
 
-:root {
-  --color-primary: rgb(0, 102, 84);
-  --color-secondary: #bb9661;
-  --sb-thumb-color: var(--color-secondary);
-  --sb-track-color: transparent;
-}
 
-.dark {
-  --color-primary: #231F20;
-  --color-secondary: rgb(164, 50, 50);
-  --sb-thumb-color: (--color-secondary);
-}
+
 
 
 ::-webkit-scrollbar-track {
@@ -89,7 +79,7 @@ html.dark {
 
 .swiper-button-prev::after,
 .swiper-button-next::after {
-  color: var(--color-secondary); /* ✅ بدل #bb9661 */
+  color: var(--color-secondary); 
 }
 
 .arabic-list {
@@ -106,7 +96,7 @@ html.dark {
 .dark .custom-gradient {
   background: linear-gradient(
     0deg,
-    rgba(128, 0, 32, 1) 0%,        /* ماروني */
+    rgba(128, 0, 32, 1) 0%,       
     rgba(128, 0, 32, 1) 0%,
     rgba(128, 0, 32, 0) 50%
   ) !important;
